--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -135,8 +135,10 @@
     </p>
 
     <ol>
-        <li>Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)</li>
-        <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 103 increasing to 3 × 104.)</li>
+        <li>Turning H2O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
+        <li>Measuring the effect on performance of funk bassplayers at temperatures 
+            exceeding 30°C (86°F), when the audience size exponentially increases 
+            (effect of 3 × 10<sup>3</sup> increasing to 3 × 10<sup>4</sup>.)</li>
         <li>HTML and CSS constructs for representing musical scores.</li>
     </ol>
 
@@ -192,34 +194,5 @@
     "Be awesome to each other." -- Bill S Preston, Esq
     </p>
 
-    <h1>This is my heading</h1>
-    <h6>Small heading</h6>
-
-    <p>
-        red <span style="color: red;">health</span></style>
-    </p>
-
-    <p>
-        <a href="https://www.cwu.edu" target="_blank">forge</a>
-    </p>
-
-    <ul>
-        <li>first</li>
-        <li>second</li>
-        <li>third</li>
-    </ul>
-
-    <ol>
-        <li>first</li>
-        <li>second</li>
-        <li>third</li>
-    </ol>
-
-    <dl>
-        <dt>term here</dt>
-        <dd>a complex definition</dd>
-        <dt>another term here</dt>
-        <dt>another complex definition</dt>
-    </dl>
 </body>
 </html>
