--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -135,7 +135,7 @@
     </p>
 
     <ol>
-        <li>Turning H2O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
+        <li>Turning H<sub>2</sub>O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
         <li>Measuring the effect on performance of funk bassplayers at temperatures 
             exceeding 30°C (86°F), when the audience size exponentially increases 
             (effect of 3 × 10<sup>3</sup> increasing to 3 × 10<sup>4</sup>.)</li>
@@ -191,7 +191,7 @@
     <p>Yours sincerely,</p>
     <p>Dr Eleanor Gaye</p>
     <p>University of Awesome motto: 
-    "Be awesome to each other." -- Bill S Preston, Esq
+    "Be awesome to each other." <i>-- The memoirs of Bill S Preston, Esq</i>
     </p>
 
 </body>
