--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -66,7 +66,7 @@
 </head>
 
 <body>
-    <adress class=".sender-column">
+    <adress class="sender-column">
         <strong>Dr. Eleanor Gaye</strong><br>
         Awesome Science faculty<br>
         University of Awesome<br>
@@ -78,7 +78,7 @@
 
     </adress>
 
-    <div class=".sender-column">20 January 2016</div>
+    <div class="sender-column">20 January 2016</div>
     
     <address>
         <strong>Miss Eileen Dover</strong><br>
