Fixed Spelling Error
Hopefully it will work now

--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -66,7 +66,7 @@
 </head>
 
 <body>
-    <adress class="sender-column">
+    <address class="sender-column">
         <strong>Dr. Eleanor Gaye</strong><br>
         Awesome Science faculty<br>
         University of Awesome<br>
@@ -76,7 +76,7 @@
         <strong>Email:</strong> no_reply@example.com
 
 
-    </adress>
+    </address>
 
     <div class="sender-column">20 January 2016</div>
     
