--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- NAVIGATION BAR -->  
 
            <nav>
-                <img src="image/patricia-frost-125-edited-medium.jpg" alt="ADD DESCRIPTION OF IMAGE">
+                <img src="images/patricia-frost-125-edited-medium.jpg" alt="Person probably CE Trffaut">
                 <ul>
                     <li><a href="letter-markup">Letter Markup</a></li>
                     <li><a href="planets-table">Planets Table</a></li>
