--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -17,10 +17,10 @@
                 Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
                 </caption>
                 <colgroup>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
+                    <col> 
+                    <col> Name
+                    <col> Mass
+                    <col> Diameter
                     <col>
                     <col>
                     <col>
