--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -19,16 +19,16 @@
                 <colgroup>
                     <col> 
                     <col> Name
-                    <col> Mass
-                    <col> Diameter
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
+                    <col> Mass (10<sup>24</sup>kg)
+                    <col> Diameter (km)
+                    <col> Density (kg/m<sup>3</sup>)
+                    <col> Gravity (m/s<sup>2</sup>)
+                    <col> Length of day (hours)
+                    <col> Distance from Sun (10<sup>6</sup>km)
+                    <col> Mean temperature (°C)
+                    <col> Number of moons
+                    <col> Notes
+                    <col> Image
                 </colgroup>
                 <thead>
                     <tr></tr>
