--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -17,24 +17,38 @@
                 Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
                 </caption>
                 <colgroup>
-                    <col> 
-                    <col> Name
-                    <col> Mass (10<sup>24</sup>kg)
-                    <col> Diameter (km)
-                    <col> Density (kg/m<sup>3</sup>)
-                    <col> Gravity (m/s<sup>2</sup>)
-                    <col> Length of day (hours)
-                    <col> Distance from Sun (10<sup>6</sup>km)
-                    <col> Mean temperature (°C)
-                    <col> Number of moons
-                    <col> Notes
-                    <col> Image
+                    <col>
+                    <col> <title> Name </title>
+                    <col> <title>Mass (10<sup>24</sup>kg)</title>
+                    <col> <title>Diameter (km)</title>
+                    <col> <title>Density (kg/m<sup>3</sup>)</title>
+                    <col> <title>Gravity (m/s<sup>2</sup>)</title>
+                    <col> <title>Length of day (hours)</title>
+                    <col> <title>Distance from Sun (10<sup>6</sup>km)</title>
+                    <col> <title>Mean temperature (°C)</title>
+                    <col> <title>Number of moons</title>
+                    <col> <title>Notes</title>
+                    <col> <title>Image</title>
                 </colgroup>
                 <thead>
                     <tr></tr>
                 </thead>
                 <tbody>
-                    <tr></tr>
+                    <tr>
+                        <td></td>
+                        <td><title> Name </title> </td>
+                        <td><title>Mass (10<sup>24</sup>kg)</title> </td>
+                        <td> <title>Diameter (km)</title></td>
+                        <td> <title>Density (kg/m<sup>3</sup>)</title></td>
+                        <td><title>Gravity (m/s<sup>2</sup>)</title></td>
+                        <td><title>Length of day (hours)</title></td>
+                        <td><title>Mean temperature (°C)</title></td>
+                        <td><title>Number of moons</title></td>
+                        <td><title>Notes</title></td>
+                        <td><title>Image</title></td>
+                        <td></td>
+                        
+                    </tr>
                     <tr></tr>
                     <tr></tr>
                     <tr></tr>
