--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -18,22 +18,19 @@
                 </caption>
                 <colgroup>
                     <col>
-                    <col> <title> Name </title>
-                    <col> <title>Mass (10<sup>24</sup>kg)</title>
-                    <col> <title>Diameter (km)</title>
-                    <col> <title>Density (kg/m<sup>3</sup>)</title>
-                    <col> <title>Gravity (m/s<sup>2</sup>)</title>
-                    <col> <title>Length of day (hours)</title>
-                    <col> <title>Distance from Sun (10<sup>6</sup>km)</title>
-                    <col> <title>Mean temperature (°C)</title>
-                    <col> <title>Number of moons</title>
-                    <col> <title>Notes</title>
-                    <col> <title>Image</title>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
                 </colgroup>
                 <thead>
-                    <tr></tr>
-                </thead>
-                <tbody>
                     <tr>
                         <td></td>
                         <td><title> Name </title> </td>
@@ -46,7 +43,11 @@
                         <td><title>Number of moons</title></td>
                         <td><title>Notes</title></td>
                         <td><title>Image</title></td>
-                        <td></td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        
                         
                     </tr>
                     <tr></tr>
