--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -32,7 +32,7 @@
                 </colgroup>
                 <thead>
                     <tr>
-                        <td></td>
+                        <td> <title> Name </title> </td>
                         <td><title> Name </title> </td>
                         <td><title>Mass (10<sup>24</sup>kg)</title> </td>
                         <td> <title>Diameter (km)</title></td>
