I think I fixed it
Maybe

--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -32,17 +32,17 @@
                 </colgroup>
                 <thead>
                     <tr>
-                        <td> <title> Name </title> </td>
-                        <td><title> Name </title> </td>
-                        <td><title>Mass (10<sup>24</sup>kg)</title> </td>
-                        <td> <title>Diameter (km)</title></td>
-                        <td> <title>Density (kg/m<sup>3</sup>)</title></td>
-                        <td><title>Gravity (m/s<sup>2</sup>)</title></td>
-                        <td><title>Length of day (hours)</title></td>
-                        <td><title>Mean temperature (°C)</title></td>
-                        <td><title>Number of moons</title></td>
-                        <td><title>Notes</title></td>
-                        <td><title>Image</title></td>
+                        <td></td>
+                        <td>Name</td>
+                        <td>Mass (10<sup>24</sup>kg)</td>
+                        <td>Diameter (km)</td>
+                        <td>Density (kg/m<sup>3</sup>)</td>
+                        <td>Gravity (m/s<sup>2</sup>)</td>
+                        <td>Length of day (hours)</td>
+                        <td>Mean temperature (°C)</td>
+                        <td>Number of moons</td>
+                        <td>Notes</td>
+                        <td>Image</td>
                     </tr>
                 </thead>
                 <tbody>
