--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Andrew Lapora">
+        <title>Planets-Table</title>
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
@@ -33,8 +34,8 @@
                 <thead>
                     <tr>
                         <td></td>
-                        <td>Name</td>
-                        <td>Mass (10<sup>24</sup>kg)</td>
+                        <th scope="col">Name</th>
+                        <th scope="col">Mass (10<sup>24</sup>kg)</th>
                         <td>Diameter (km)</td>
                         <td>Density (kg/m<sup>3</sup>)</td>
                         <td>Gravity (m/s<sup>2</sup>)</td>
