--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -33,17 +33,17 @@
                 </colgroup>
                 <thead>
                     <tr>
-                        <td></td>
+                        <th colspan="2"></th>
                         <th scope="col">Name</th>
                         <th scope="col">Mass (10<sup>24</sup>kg)</th>
-                        <td>Diameter (km)</td>
-                        <td>Density (kg/m<sup>3</sup>)</td>
-                        <td>Gravity (m/s<sup>2</sup>)</td>
-                        <td>Length of day (hours)</td>
-                        <td>Mean temperature (°C)</td>
-                        <td>Number of moons</td>
-                        <td>Notes</td>
-                        <td>Image</td>
+                        <th scope="col">Diameter (km)</th>
+                        <th scope="col">Density (kg/m<sup>3</sup>)</th>
+                        <th scope="col">Gravity (m/s<sup>2</sup>)</th>
+                        <th scope="col">Length of day (hours)</th>
+                        <th scope="col">Mean temperature (°C)</th>
+                        <th scope="col">Number of moons</th>
+                        <th scope="col">Notes</th>
+                        <th scope="col">Image</th>
                     </tr>
                 </thead>
                 <tbody>
