Added info for Mercury
Hopefully did it all right

--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -48,12 +48,18 @@
                 </thead>
                 <tbody>
                     <tr>
-                        
+                        <th>Mercury</th>
                         
                     </tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
+                    <tr>
+                        <th>Venus</th>
+                    </tr>
+                    <tr>
+                        <th>Earth</th>
+                    </tr>
+                    <tr>
+                        <th>Mars</th>
+                    </tr>
                     <tr></tr>
                     <tr></tr>
                     <tr></tr>
