--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -48,8 +48,18 @@
                 </thead>
                 <tbody>
                     <tr>
+                        <td></td>
                         <th>Mercury</th>
-                        
+                        <td>0.330</td>
+                        <td>4,879</td>
+                        <td>5427</td>
+                        <td>3.7</td>
+                        <td>4222.6</td>
+                        <td>57.9</td>
+                        <td>167</td>
+                        <td>0</td>
+                        <td>Closest to the Sun</td>
+                        <img src="images/mercury.jpg" alt="image of Mercury">
                     </tr>
                     <tr>
                         <th>Venus</th>
