Added rowspan and fixed colspan
Changed back to 2 for colspan and rowspan set to 4

--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -33,7 +33,7 @@
                 </colgroup>
                 <thead>
                     <tr>
-                        <th colspan="10"></th>
+                        <th colspan="2"></th>
                         <th scope="col">Name</th>
                         <th scope="col">Mass (10<sup>24</sup>kg)</th>
                         <th scope="col">Diameter (km)</th>
@@ -48,7 +48,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td></td>
+                        <th colspan="2" rowspan="4"></td>
                         <th>Mercury</th>
                         <td>0.330</td>
                         <td>4,879</td>
@@ -59,7 +59,7 @@
                         <td>167</td>
                         <td>0</td>
                         <td>Closest to the Sun</td>
-                        <img src="images/mercury.jpg" alt="image of Mercury">
+                        <td><img src="images/mercury.jpg" alt="image of Mercury"></td>
                     </tr>
                     <tr>
                         <th>Venus</th>
