--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -40,6 +40,7 @@
                         <th scope="col">Density (kg/m<sup>3</sup>)</th>
                         <th scope="col">Gravity (m/s<sup>2</sup>)</th>
                         <th scope="col">Length of day (hours)</th>
+                        <th scope="col">Distance from Sun (10<sup>6</sup>km)</th>
                         <th scope="col">Mean temperature (°C)</th>
                         <th scope="col">Number of moons</th>
                         <th scope="col">Notes</th>
@@ -49,7 +50,7 @@
                 <tbody>
                     <tr>
                         <th colspan="2" rowspan="4"></td>
-                        <th>Mercury</th>
+                        <th scope="row">Mercury</th>
                         <td>0.330</td>
                         <td>4,879</td>
                         <td>5427</td>
