--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -51,7 +51,7 @@
                     <tr>
                         <th colspan="2" rowspan="4"></td>
                         <th scope="row">Mercury</th>
-                        <td>0.330</td>
+                        <td scope="row">0.330</td>
                         <td>4,879</td>
                         <td>5427</td>
                         <td>3.7</td>
