--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -49,9 +49,9 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th colspan="2" rowspan="4"></td>
+                        <th colspan="2" rowspan="4">Terrestial planets</th>
                         <th scope="row">Mercury</th>
-                        <td scope="row">0.330</td>
+                        <td>0.330</td>
                         <td>4,879</td>
                         <td>5427</td>
                         <td>3.7</td>
@@ -64,12 +64,42 @@
                     </tr>
                     <tr>
                         <th>Venus</th>
+                        <td>4.87</td>
+                        <td>12,104</td>
+                        <td>5243</td>
+                        <td>8.9</td>
+                        <td>2802.0</td>
+                        <td>108.2</td>
+                        <td>464</td>
+                        <td>0</td>
+                        <td></td>
+                        <td><img src="images/venus.jpg" alt="image of Venus"></td>
                     </tr>
                     <tr>
                         <th>Earth</th>
+                        <td>5.97</td>
+                        <td>12,756</td>
+                        <td>5514</td>
+                        <td>9.8</td>
+                        <td>24.0</td>
+                        <td>149.6</td>
+                        <td>15</td>
+                        <td>1</td>
+                        <td>Our world</td>
+                        <td><img src="images/earth.jpg" alt="image of Earth"></td>
                     </tr>
                     <tr>
                         <th>Mars</th>
+                        <td>0.642</td> 
+                        <td>6,792</td>
+                        <td>3933</td>
+                        <td>3.7</td>
+                        <td>24.7</td>
+                        <td>227.9</td>
+                        <td>-65</td>
+                        <td>2</td>
+                        <td>The red planet</td>
+                        <td><img src="images/mars.jpg" alt="image of Mars"></td>
                     </tr>
                     <tr></tr>
                     <tr></tr>
