--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -49,7 +49,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th colspan="2" rowspan="4">Terrestial planets</th>
+                        <th colspan="4" rowspan="4">Terrestial planets</th>
                         <th scope="row">Mercury</th>
                         <td>0.330</td>
                         <td>4,879</td>
@@ -101,7 +101,20 @@
                         <td>The red planet</td>
                         <td><img src="images/mars.jpg" alt="image of Mars"></td>
                     </tr>
-                    <tr></tr>
+                    <tr>
+                        <th colspan="2" rowspan="4"></th>
+                        <th>Jupiter</th>
+                        <td>1898</td> 
+                        <td>142,984</td>
+                        <td>1326</td>
+                        <td>23.1</td>
+                        <td>9.9</td>
+                        <td>778.6</td>
+                        <td>-110</td>
+                        <td>67</td>
+                        <td>The largest planet</td>
+                        <td><img src="images/jupiter.jpg" alt="image of Jupiter"></td>
+                    </tr>
                     <tr></tr>
                     <tr></tr>
                     <tr></tr>
