Fixed col alignment
Tough

--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -33,7 +33,7 @@
                 </colgroup>
                 <thead>
                     <tr>
-                        <th colspan="2"></th>
+                        <th colspan="4"></th>
                         <th scope="col">Name</th>
                         <th scope="col">Mass (10<sup>24</sup>kg)</th>
                         <th scope="col">Diameter (km)</th>
@@ -102,7 +102,7 @@
                         <td><img src="images/mars.jpg" alt="image of Mars"></td>
                     </tr>
                     <tr>
-                        <th colspan="2" rowspan="4"></th>
+                        <th colspan="2" rowspan="4">Jovian planets</th>
                         <th>Jupiter</th>
                         <td>1898</td> 
                         <td>142,984</td>
