--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -33,7 +33,7 @@
                 </colgroup>
                 <thead>
                     <tr>
-                        <th colspan="4"></th>
+                        <th colspan="2"></th>
                         <th scope="col">Name</th>
                         <th scope="col">Mass (10<sup>24</sup>kg)</th>
                         <th scope="col">Diameter (km)</th>
@@ -49,7 +49,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th colspan="4" rowspan="4">Terrestial planets</th>
+                        <th colspan="2" rowspan="4">Terrestial planets</th>
                         <th scope="row">Mercury</th>
                         <td>0.330</td>
                         <td>4,879</td>
@@ -102,7 +102,8 @@
                         <td><img src="images/mars.jpg" alt="image of Mars"></td>
                     </tr>
                     <tr>
-                        <th colspan="2" rowspan="4">Jovian planets</th>
+                        <th rowspan="4">Jovian planets</th>
+                        <th rowspan="2">Gas planets</th>
                         <th>Jupiter</th>
                         <td>1898</td> 
                         <td>142,984</td>
@@ -115,8 +116,13 @@
                         <td>The largest planet</td>
                         <td><img src="images/jupiter.jpg" alt="image of Jupiter"></td>
                     </tr>
-                    <tr></tr>
-                    <tr></tr>
+                    <tr>
+                        <td>Saturn</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="2">Ice giants</th>
+                        <th>Uranus</th>
+                    </tr>
                     <tr></tr>
                     <tr></tr>
                 </tbody>
