--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -18,22 +18,22 @@
                 Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
                 </caption>
                 <colgroup>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
+                    <col span="2" title="Planet groups">
+                    <col title="Planet names">
+                    <col title="Mass">
+                    <col title="Diameter">
+                    <col title="Gravity">
+                    <col title="Length of day">
+                    <col title="Distance from sun">
+                    <col title="Mean temperature">
+                    <col title="Number of moons">
+                    <col title="Notes">
+                    <col title="Image">
                     <col>
                 </colgroup>
                 <thead>
                     <tr>
-                        <th colspan="2"></th>
+                        <th colspan="2" scope="colgroup"></th>
                         <th scope="col">Name</th>
                         <th scope="col">Mass (10<sup>24</sup>kg)</th>
                         <th scope="col">Diameter (km)</th>
