--- a/wanted-poster/index.html
+++ b/wanted-poster/index.html
@@ -4,15 +4,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="John Durham">
-        
-<!-- Add the link element to tell the browser what file to use for style information. -->
-        
+        <link href="css/stlye.css" rel="sylesheet">
         <title>Wanted | Jame Markus</title>
     </head>
     <body>
         <main>
             <header>
-                <h1>Wanted!</h1>
+                <h1 class="h1">Wanted!</h1>
                 <h5>by the United States Department of Adorable Tiny Dogs</h5>
                 <h2>James Markus</h2>
                 <h3>"Mark Rufffalo"</h3>
