--- a/wanted-poster/index.html
+++ b/wanted-poster/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="John Durham">
+        <meta name="author" content="Andre Lane">
         <link href="css/stlye.css" rel="sylesheet">
         <title>Wanted | Jame Markus</title>
     </head>
