--- a/school-site/index.html
+++ b/school-site/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Andre Lane">
-        <link href="css/style.css" rel="sylesheet">
+        <link href="css/style.css" rel="stylesheet">
         <title>Franzen Irony University</title>
         
         
