--- a/school-site/index.html
+++ b/school-site/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <h1>Test Franzen Irony University</h1>
+            <h1>Franzen Irony University</h1>
         </header>
         <nav>
             <a href="#">Bespoke </a>
